--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -1,22 +1,22 @@
-$surface-1: hsl(240, 3%, 4%);
-$surface-2: hsl(240, 3%, 8%);
-$surface-3: hsl(240, 3%, 12%);
-$surface-4: hsl(240, 3%, 16%);
-$surface-5: hsl(240, 3%, 20%);
+$surface-1: #0F0F0F;
+$surface-2: #141414;
+$surface-3: #1A1A1A;
+$surface-4: #1F1F1F;
+$surface-5: #353535;
 
-$accent-1: hsl(0,60%,60%);
-$accent-2: hsl(25,60%,60%);
-$accent-3: hsl(55,60%,60%);
-$accent-4: hsl(145,60%,60%);
-$accent-5: hsl(185,60%,60%);
-$accent-6: hsl(240,60%,60%);
-$accent-7: hsl(265,60%,60%);
-$accent-8: hsl(300,60%,60%);
+$accent-1: #BE3A0E;
+$accent-2: #F97D10;
+$accent-3: #FA9033;
+$accent-4: #5F9566;
+$accent-5: #6C84D5;
+$accent-6: #314FAF;
+$accent-7: #613E8E;
+$accent-8: #744BAA;
 
-$primary-accent: $accent-7;
-$secondary-accent: $accent-4;
+$primary-accent: $accent-4;
+$secondary-accent: $accent-5;
 
-$foreground-color: lighten($surface-5, 45%);
+$foreground-color: #B2AEAE;
 
 $highlight: rgba(255,255,255,0.15);
 
