add solo branch with solo scheme

--- a/scss/gtk-3.0/_colors.scss
+++ b/scss/gtk-3.0/_colors.scss
@@ -1,22 +1,22 @@
-$surface-1: #0F0F0F;
-$surface-2: #141414;
-$surface-3: #1A1A1A;
-$surface-4: #1F1F1F;
-$surface-5: #353535;
+$surface-1: #bcb8b8;
+$surface-2: #B2AEAE;
+$surface-3: #A4A3A2;
+$surface-4: #91908D;
+$surface-5: #C3C1C1;
 
-$accent-1: #BE3A0E;
-$accent-2: #F97D10;
-$accent-3: #FA9033;
-$accent-4: #5F9566;
-$accent-5: #6C84D5;
-$accent-6: #314FAF;
-$accent-7: #613E8E;
-$accent-8: #744BAA;
+$accent-1: #b63206;
+$accent-2: #e96d00;
+$accent-3: #ea8023;
+$accent-4: #48744e;
+$accent-5: #4865c6;
+$accent-6: #2947a7;
+$accent-7: #593686;
+$accent-8: #6c43a2;
 
 $primary-accent: $accent-4;
 $secondary-accent: $accent-5;
 
-$foreground-color: #B2AEAE;
+$foreground-color: #141414;
 
 $highlight: rgba(255,255,255,0.15);
 
